--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,6 +6,11 @@ on:
     paths:
       - 'nginx/**' # nginx 폴더 내부의 변경 사항만 감지
 
+# 동일한 워크플로우가 동시에 돌 때 충돌을 방지합니다. (새 작업이 들어오면 이전 작업 취소)
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -15,6 +20,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Git 로그를 모두 가져와야 push 시 충돌 에러를 줄여줍니다.
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -37,19 +44,26 @@ jobs:
           docker push $ECR_REGISTRY/$IMAGE_REPO:$IMAGE_TAG
           echo "IMAGE_FULL_URI=$ECR_REGISTRY/$IMAGE_REPO:$IMAGE_TAG" >> $GITHUB_ENV # 다음 스텝에서 사용하기 위해 변수 저장
 
-      - name: Update Kubernetes Manifests
+      - name: Update Kubernetes Manifests (ArgoCD Trigger)
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          # manifests/deployment.yaml 파일의 이미지 태그 업데이트
+          # manifests 폴더 내의 모든 .yaml과 .yml 파일을 찾아서 이미지 업데이트
           # sed 명령어로 IMAGE_TAG_PLACEHOLDER를 실제 이미지 URI와 태그로 대체
-          sed -i "s|IMAGE_TAG_PLACEHOLDER|${{ env.IMAGE_TAG }}|g" manifests/deployment.yaml
+          find manifests -name "*.y*ml" -exec sed -i "s|IMAGE_TAG_PLACEHOLDER|${{ env.IMAGE_TAG }}|g" {} +
           
-          # 변경 사항이 있는지 확인
-          git diff --quiet manifests/deployment.yaml || (git add manifests/deployment.yaml && git commit -m "chore: Update image tag to ${{ env.IMAGE_TAG }}" && git push)
-        env:
-          # `GITHUB_TOKEN`은 GitHub Actions에서 자동으로 제공하는 토큰으로, 저장소에 푸시할 권한이 있습니다.
-          # `permissions` 섹션에 `contents: write`가 설정되어 있어야 합니다.
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # 변경 사항이 있는지 확인 후 커밋 (변경 사항 없으면 건너뜀)
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git add manifests/*.y*ml # 변경된 yaml 파일들만 스테이징
+            # [skip ci]를 넣어 자동화 커밋이 다시 Action을 실행시키지 않게 합니다.
+            git commit -m "chore: Auto-deploy update image tag to ${{ env.IMAGE_TAG }} [skip ci]"
 
+            # 다른 작업과 충돌 방지를 위해 pull 후 push 합니다.
+            git pull --rebase origin main
+            git push origin main
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
