--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -40,13 +40,13 @@ kind: Ingress
 metadata:
   name: argo-nginx-ingress
   annotations:
-    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: instance
     alb.ingress.kubernetes.io/group.name: argo-nginx-ingress-group
   labels:
     app: argo-nginx
 spec:
+  ingressClassName: alb # 최신 방식 추가
   rules:
     - http:
         paths:
